// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic templates Works with template items plus value items Should show template item first when coming before values on lexical order 1`] = `
Object {
  "asset": Object {
    "id": "overviewItem3",
    "label": Object {
      "asset": Object {
        "id": "overviewItem3-label",
        "type": "text",
        "value": "1099-A",
      },
    },
    "type": "overviewItem",
    "values": Array [
      Object {
        "asset": Object {
          "id": "overviewItem3-year",
          "type": "text",
          "value": "Desciption of concept 1099 1",
        },
      },
      Object {
        "asset": Object {
          "id": "loverviewItem3-cy",
          "type": "text",
          "value": "4000",
        },
      },
    ],
  },
}
`;

exports[`dynamic templates Works with template items plus value items Should show template item last when coming after values on lexical order 1`] = `
Object {
  "asset": Object {
    "id": "overviewItem1",
    "label": Object {
      "asset": Object {
        "id": "overviewItem1-label",
        "type": "text",
        "value": "First Summary",
      },
    },
    "type": "overviewItem",
    "values": Array [
      Object {
        "asset": Object {
          "id": "overviewItem1-year",
          "type": "text",
          "value": "Desciption of year summary 1",
        },
      },
      Object {
        "asset": Object {
          "id": "loverviewItem1-cy",
          "type": "text",
          "value": "14000",
        },
      },
    ],
  },
}
`;

exports[`templates works with nested templates 1`] = `
Object {
  "children": Array [
    Object {
      "path": Array [
        "values",
      ],
      "value": Object {
        "override": false,
        "parent": [Circular],
        "type": "multi-node",
        "values": Array [
          Object {
            "children": Array [
              Object {
                "path": Array [
                  "asset",
                ],
                "value": Object {
                  "children": Array [
                    Object {
                      "path": Array [
                        "values",
                      ],
                      "value": Object {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": Array [
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.0}} + {{foo.people.0}}",
                            },
                          },
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.0}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": Object {
                    "id": "outer-collection-0",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
          Object {
            "children": Array [
              Object {
                "path": Array [
                  "asset",
                ],
                "value": Object {
                  "children": Array [
                    Object {
                      "path": Array [
                        "values",
                      ],
                      "value": Object {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": Array [
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.1}} + {{foo.people.0}}",
                            },
                          },
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.1}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": Object {
                    "id": "outer-collection-1",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
          Object {
            "children": Array [
              Object {
                "path": Array [
                  "asset",
                ],
                "value": Object {
                  "children": Array [
                    Object {
                      "path": Array [
                        "values",
                      ],
                      "value": Object {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": Array [
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.2}} + {{foo.people.0}}",
                            },
                          },
                          Object {
                            "parent": [Circular],
                            "type": "value",
                            "value": Object {
                              "text": "{{foo.pets.2}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": Object {
                    "id": "outer-collection-2",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
        ],
      },
    },
  ],
  "type": "value",
  "value": Object {
    "id": "foo",
    "type": "collection",
  },
}
`;

exports[`templates works with simple ones 1`] = `
Object {
  "children": Array [
    Object {
      "path": Array [
        "values",
      ],
      "value": Object {
        "override": false,
        "parent": [Circular],
        "type": "multi-node",
        "values": Array [
          Object {
            "parent": [Circular],
            "type": "value",
            "value": Object {
              "value": "{{foo.bar.0}}",
            },
          },
          Object {
            "parent": [Circular],
            "type": "value",
            "value": Object {
              "value": "{{foo.bar.1}}",
            },
          },
          Object {
            "parent": [Circular],
            "type": "value",
            "value": Object {
              "value": "{{foo.bar.2}}",
            },
          },
        ],
      },
    },
  ],
  "type": "value",
  "value": Object {
    "id": "foo",
    "type": "collection",
  },
}
`;
